<resources>
    <string name="app_name">laboratorio_5_00050519</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billboard_text">Billboard</string>
    <string name="starwars_text">Star Wars episodio 3: La Venganza de los Sith</string>
    <string name="starwars_score">9.8</string>
    <string name="harry_potter_text">Harry Potter y La Piedra Filosofal</string>
    <string name="harry_potter_score">9.5</string>
    <string name="science_fiction_text">Ciencia Ficcion</string>
    <string name="starwars_review_text">La pelicula se centra en el personaje de Anakin Skywalker, quien esta siendo tentado por el lado oscuro de la fuerza mientras el imperio galactico comienza a surgir. La trama tambien muestra la caida de la republica y el ascenso del emperador Palpatine</string>
    <string name="new_movie_title">NEW MOVIE</string>
    <string name="name_texfield_hint_text">name</string>
    <string name="category_textfield_hint_text">Category</string>
    <string name="description_textfield_hint_text">Description</string>
    <string name="calification_textfield_hint_text">Calification</string>
    <string name="submit_button_text">SUBMIT</string>
</resources>