<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundLayout"
    android:padding="@dimen/content_margin"
    tools:context=".movieFragment">

    <LinearLayout
        android:id="@+id/form_container"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/starwars_review_image"
            android:layout_gravity="center"
            android:layout_width="@dimen/img_width"
            android:layout_height="100dp"
            android:src="@drawable/star_wars"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/review_title_text"
            android:text="@string/starwars_text"
            android:layout_marginBottom="@dimen/default_gap"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/medium_gap"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science_fiction_text"
                android:textSize="@dimen/review_title_text"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starwars_score"
                android:textSize="@dimen/review_title_text"
                android:textColor="@color/calification"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starwars_review_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/review_paragraph_text"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>