<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/backgroundLayout"
tools:context=".billboardFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.0"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/content_margin"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/billboard_textview"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/billboard_text"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_marginTop="@dimen/default_gap"
        app:layout_constraintTop_toBottomOf="@id/billboard_textview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        app:cardCornerRadius="@dimen/default_corner_radius"
        android:background="@color/cardLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardLayout"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="@dimen/img_width"
                android:layout_height="match_parent"
                android:src="@drawable/star_wars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/cardLayout"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/starwars_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/starwars_score"
                    android:textColor="@color/calification"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_marginTop="@dimen/default_gap"
        app:layout_constraintTop_toBottomOf="@id/card1"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/default_corner_radius"
        android:layout_height="@dimen/card_height"
        android:background="@color/cardLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardLayout"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="@dimen/img_width"
                android:layout_height="match_parent"
                android:src="@drawable/harry_potter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/cardLayout"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/harry_potter_text"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/harry_potter_score"
                    android:textAlignment="center"
                    android:textColor="@color/calification" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/add_movie_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    android:src="@android:drawable/ic_menu_add"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.9"
    app:layout_constraintVertical_bias="0.9"
    android:backgroundTint="@color/buttonColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>